# Osciloscopio-new

./: CMakeLists.txt  main_v2_2_usb_otg.c
.github/workflows/: CMakeLists.txt  build.yml
